# PortalGL

./: .gitignore  CMakeLists.txt  LogFile.txt  imgui.ini  log.txt  save.json
CMake/: FindAssimp.cmake  FindRapidJSON.cmake  findBullet.cmake
assets/aperture_radio/: LICENSE.txt
assets/aperture_radio/source/: radio_wrapped_meshfixes.fbx
assets/companion_cube/: license.txt  scene.gltf
assets/portal_turret/: CREDITS.txt
game/include/: AIMesh.h  AIModel.h  Button.h  CollisionSystem.h  DebugDrawer.h  DynamicCharacterController.h  GameObject.h  MotionState.h  Oscillator.h  PhysicsComponent.h  Raycast.h  Singleton.h  Transfrom.h  Turret.h  UIManager.h  WorldPhysics.h  player.h
game/shader/: DebugDrawerFragShader.glsl  DebugDrawerVertexShader.glsl
game/src/: AIMesh.cpp  AIModel.cpp  Button.cpp  CollisionSystem.cpp  DebugDrawer.cpp  DynamicCharacterController.cpp  GameObject.cpp  MotionState.cpp  PhysicsComponent.cpp  Raycast.cpp  Singleton.cpp  Transfrom.cpp  Turret.cpp  UIManager.cpp  WorldPhysics.cpp  player.cpp
libGL/GLAD/include/glad/: glad.h
libGL/GLAD/src/: glad.cpp
libGL/OPENGL PROJECT/source/include/LowRenderer/: Camera.h  Light.h  Mesh.h
libGL/OPENGL PROJECT/source/include/Resources/: Application.h  Model.h  Shader.h  Texture.h
libGL/OPENGL PROJECT/source/src/: GLFWApp.cpp
libGL/OPENGL PROJECT/source/src/Core/Debug/: Log.cpp
libGL/OPENGL PROJECT/source/src/LowRenderer/: Camera.cpp  Light.cpp  Mesh.cpp
libGL/OPENGL PROJECT/source/src/Resources/: Application.cpp  Model.cpp  Resourcesmanager.cpp  Scene.cpp  Shader.cpp  Texture.cpp
libmaths/Vec3/: Vec3.h
